# GraphicsEngine

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  make.sh
include/glad/: glad.h
includes/: EBO.h  VAO.h  VBO.h  camera.h  color.h  frame.h  matrix.h  model.h  modelUtils.h  shader.h  vertex.h
shaders/: default.frag  default.vert  multiColor.frag  multiColor.vert  resources.md  static.frag  static.vert
src/: VAO.cpp  camera.cpp  color.cpp  frame.cpp  glad.c  main.cpp  matrix.cpp  model.cpp  modelUtils.cpp  shader.cpp  vertex.cpp
tests/includes/: shader_tests.h  utils.h  vertex_tests.h
tests/src/: master_test.cpp  shader_tests.cpp  utils.cpp  vertex_tests.cpp
